2019-04-01  Carlos O'Donell  <carlos@redhat.com>

	* localedata/locales/ja_JP: Add comments to era entries.

2019-04-01  DJ Delorie  <dj@redhat.com>

	[BZ #24394]
	* time/strptime_l.c (%Ey): Fix fencepost error.
	* time/tst-strftime3.c: New.
	* time/Makefile (tests): Add tst-strftime3.

2019-04-01  Uros Bizjak <ubizjak@gmail.com>

	* sysdeps/alpha/divqu.S (__divqu): Move save of $f0 and excb after
	conditional branch to DIVBYZERO.  Fix unwind info.
	* sysdeps/alpha/remqu.S (__remqu): Move saves of $f0, $f1, $f2 and
	excb after conditional branch to $powerof2.  Add missing unop
	instructions and .align directives and reorder instructions to
	match __divqu.

2019-04-01  Richard Henderson  <rth@twiddle.net>

	* sysdeps/unix/sysv/linux/alpha/kernel-features.h (__NR_shmat):
	Do not redefine.
	* sysdeps/unix/sysv/linux/alpha/sysdep.h (__NR_osf_shmat):
	Do not redefine.

2019-03-30  Maciej W. Rozycki  <macro@wdc.com>

	* sysdeps/unix/sysv/linux/riscv/configure.ac: Quote
	$libc_cv_riscv_float_abi in `test' invocation.
	* sysdeps/unix/sysv/linux/riscv/configure: Regenerate.

2019-03-29  Paul A. Clarke  <pc@us.ibm.com>

	* sysdeps/powerpc/fpu/fenv_libc.h (fegetenv_register): Replace inline
	asm with builtin.
	* sysdeps/powerpc/powerpc64/le/fpu/sfp-machine.h (FP_INIT_ROUNDMODE):
	Likewise.
	* sysdeps/powerpc/fpu/tst-setcontext-fpscr.c (_GET_DI_FPSCR): Likewise.
	(_GET_SI_FPSCR): Likewise.
	(_SET_SI_FPSCR): Likewise.

2019-03-26  Adhemerval Zanella  <adhemerval.zanella@linaro.org>

	* math/math.h (fpclassify, isfinite, isnormal, isnan): Use builtin for
	clang 2.8.
	(signbit): Use builtin for clang 3.3.
	(isinf): Use builtin for clang 3.7.

2019-03-25  Adhemerval Zanella  <adhemerval.zanella@linaro.org>

	* sysdeps/powerpc/fpu/s_float_bitwise.h: Remove file.

2019-03-25  Andreas K. Hüttel  <dilfridge@gentoo.org>

	* nss/tst-nss-files-alias-leak.c (do_test): add missing opening
	quote in printf.

2019-03-25  Mike Crowe  <mac@mcrowe.com>
